GUI loads/saves from file (jankily)

--- a/defaults.ini
+++ b/defaults.ini
@@ -1,7 +1,7 @@
 [Hardware Settings]
 Binning = 0
 Sync Offset = 0
-Sync Divider = 1
+Sync Divider = 0
 CFD0 Zero Crossing = 10
 CFD0 Level = 50
 CFD1 Zero Crossing = 10
@@ -9,6 +9,7 @@ CFD1 Level = 50
 Acquisition Time = 500
 
 [Software Settings]
-Show Cursor = True
-Show Deltas = True
+Show Cursor = False
+Show Deltas = False
 Show Bars = False
+
