Scan mode: every hitoTime, a next sequence is updated in communication.csv and DDS frequency is scanned. Didn't implement UI yet.

--- a/init.ini
+++ b/init.ini
@@ -1,11 +1,11 @@
 [Hardware Settings]
-binning = 0
+binning = 7
 sync offset = 0
 sync divider = 1
 cfd0 zero crossing = 10
-cfd0 level = 50
+cfd0 level = 100
 cfd1 zero crossing = 10
-cfd1 level = 50
+cfd1 level = 300
 acquisition time = 500
 
 [Software Settings]
@@ -13,6 +13,5 @@ show cursor = True
 show deltas = True
 show bars = True
 integral width = 5e-09
-cumulative mode = False
+cumulative mode = True
 log y = False
-
