Router in main logic. Tested LD_Pharp_Dummy and it works well.

--- a/init.ini
+++ b/init.ini
@@ -7,6 +7,7 @@ cfd0 level = 100
 cfd1 zero crossing = 10
 cfd1 level = 300
 acquisition time = 500
+router enabled = 1
 
 [Software Settings]
 show cursor = True
@@ -16,3 +17,33 @@ integral width = 5e-09
 cumulative mode = True
 log y = False
 max time = 500
+
+[Router Offset]
+router1 = 0
+router2 = 0
+router3 = 0
+router4 = 0
+
+[PHR800 Level]
+router1 = 1500
+router2 = 1500
+router3 = 1500
+router4 = 1500
+
+[PHR800 Edge]
+router1 = 0
+router2 = 0
+router3 = 0
+router4 = 0
+
+[PHR800 CFD Level]
+router1 = 0
+router2 = 0
+router3 = 0
+router4 = 0
+
+[PHR800 CFD ZC]
+router1 = 0
+router2 = 0
+router3 = 0
+router4 = 0
