--- a/defaults.ini
+++ b/defaults.ini
@@ -7,6 +7,7 @@ cfd0 level = 50
 cfd1 zero crossing = 10
 cfd1 level = 50
 acquisition time = 500
+router enabled = 1
 
 [Software Settings]
 show cursor = True
@@ -16,4 +17,34 @@ integral width = 5e-09
 cumulative mode = False
 log y = False
 max time = 1000
+
+[Router Offset]
+router1 = 0
+router2 = 0
+router3 = 0
+router4 = 0
+
+[PHR800 Level]
+router1 = 1500
+router2 = 1500
+router3 = 1500
+router4 = 1500
+
+[PHR800 Edge]
+router1 = 1
+router2 = 1
+router3 = 1
+router4 = 1
+
+[PHR800 CFD Level]
+router1 = 0
+router2 = 0
+router3 = 0
+router4 = 0
+
+[PHR800 CFD ZC]
+router1 = 0
+router2 = 0
+router3 = 0
+router4 = 0
 
